完成了商品添加功能和商品编辑功能，商品管理模块全部完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -33,3 +33,15 @@ body,
 div .el-scrollbar__wrap {
     height: 300px !important
 }
+
+.el-step {
+    margin: 15px 0;
+}
+
+.el-step__title {
+    font-size: 12px;
+}
+
+.ql-editor {
+    min-height: 300px;
+}
